Lore system overhaul